@@ -2,7 +2,7 @@
 
 use warnings;
 use strict;
-use Test::Most tests => 11;
+use Test::Most tests => 12;
 use Geo::Location::Point 0.09;
 
 BEGIN {
@@ -10,18 +10,18 @@ BEGIN {
 }
 
 WEATHER: {
-	SKIP: {
-		my $meteo = new_ok('Weather::Meteo');
+	my $meteo = new_ok('Weather::Meteo');
 
+	SKIP: {
 		if(-e 't/online.enabled') {
 			require DateTime;
 			DateTime->import();
 		} elsif($ENV{'AUTHOR_TESTING'}) {
 			diag('Test requires Internet access');
-			skip('Test requires Internet access', 9);
+			skip('Test requires Internet access', 10);
 		} else {
 			diag('Author tests not required for installation');
-			skip('Author tests not required for installation', 9);
+			skip('Author tests not required for installation', 10);
 		}
 		# Weather in Ramsgate on Christmas Day 2022
 		my $weather = $meteo->weather({ latitude => 51.34, longitude => 1.42, date => '2022-12-25' });
@@ -46,6 +46,9 @@ WEATHER: {
 		isnt(qr/\D/, $rain[1]);	# Must only be digits
 
 		$weather = $meteo->weather({ location => $location, date => new_ok('DateTime' => [ year => 2000, month => 6, day => 5 ]) });
+
+		$weather = $meteo->weather(latitude => 51.283333, longitude => .4, date => '1970-02-12');
+		is(ref($weather), 'HASH');
 
 		# Data prior to 1940 is not in the database
 
